--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "contacts-server",
-  "version": "1.0.0",
-  "description": "REST API to manage contacts",
-  "homepage": "https://github.com/zspitz/contacts-server#readme",
-  "bugs": {
-    "url": "https://github.com/zspitz/contacts-server/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zspitz/contacts-server.git"
-  },
-  "license": "MIT",
-  "author": "",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "express": "^4.21.2",
-    "joi": "^17.13.3",
-    "mongoose": "^8.9.5"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.18.0",
-    "eslint": "^9.18.0",
-    "globals": "^15.14.0"
-  }
+    "name": "contacts-server",
+    "version": "1.0.0",
+    "description": "REST API to manage contacts",
+    "homepage": "https://github.com/zspitz/contacts-server#readme",
+    "bugs": {
+        "url": "https://github.com/zspitz/contacts-server/issues"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/zspitz/contacts-server.git"
+    },
+    "license": "MIT",
+    "author": "",
+    "type": "module",
+    "main": "src/index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "node --watch-path=src src/index.js"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.21.2",
+        "joi": "^17.13.3",
+        "mongoose": "^8.9.5"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.18.0",
+        "eslint": "^9.18.0",
+        "globals": "^15.14.0"
+    }
 }
