--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.21.2",
+        "express-list-routes": "^1.2.4",
         "joi": "^17.13.3",
         "mongoose": "^8.9.5"
     },
