--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "express": "^4.21.2",
         "express-list-routes": "^1.2.4",
         "joi": "^17.13.3",
-        "mongoose": "^8.9.5"
+        "mongoose": "^8.9.5",
+        "morgan": "^1.10.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.18.0",
